app/css/core.css
@font-face {
    font-family: 'Arial';
    src:  url('../fonts/Arial/Arial.ttf') format('opentype');

    font-family: 'ArialMono';
    src:  url('../fonts/ArialMono/Arial_Monospaced_MT.ttf') format('opentype');

}

/* ########################################################################## */
/* BODY */
/* ########################################################################## */
body{
    font-family: 'Arial';
}



/* ########################################################################## */
/* NAV COLOR ON SETTINGS */
/* ########################################################################## */
.nav-link{
    color: gray;
}

.nav-link:hover{
    color: #c0392b;
}

.nav-item.nav-link.active{
    color: #c0392b;
}


/* ########################################################################## */
/* BOOTSTRAP MODAL - used as SPLASH */
/* ########################################################################## */
/* opacity of background */
.modal-backdrop
{
    opacity:0.0 !important;
}

/* removing border from splash */
.no-border{
  border:none !important;
}


/* ########################################################################## */
/* THE MAIN UI WINDOW CONTAINER */
/* ########################################################################## */
#mainContainer{
    animation-delay: 0.5s; /* custom animation delay */
}

/* ########################################################################## */
/* UI TEXT - MAKE THEM NOT SELECTABLE */
/* ########################################################################## */
.mediaDupes_nonSelectableText {
    -webkit-user-select:none;
    -moz-user-select: none;
}

/* ########################################################################## */
/* WINDOW BORDER */
/* ########################################################################## */
.container-after-titlebar{
    border-left: 1px solid #171717;
    border-right: 1px solid #171717;
    border-bottom: 1px solid #171717;
}

/* ########################################################################## */
/* CUSTOM-TITLEBAR */
/* ########################################################################## */
.window-title{
    font-size: 13px !important;
}

/* ########################################################################## */
/* HEADINGS */
/* ########################################################################## */
h2{
    text-align: right;
    color: gray;
    font-size: 24px;
}

h3{
    text-align: right;
    color: gray;
    font-size: 16px;
}

h4{
    color: #c0392b;
}

h5{
    color: gray;
    font-size: 18px;
}

h6{
    font-size: 14px;
    color: gray;
}

/* ########################################################################## */
/* TEXTAREAs */
/* ########################################################################## */
textarea {
    font-size: 12px !important;
    font-weight: bold;
    /* font-family: Verdana, Arial, Helvetica, sans-serif; */
    /*
    font-family: monospace;
    */
    font-family: 'ArialMono';

    background-color: #ecf0f1;
    background-repeat: no-repeat;
    background-position: center;
    width: 32px;
    height:32px;
}

#textareaTodoList {
    min-width: 100%;
    width: 100%;
    resize: none;
}

#textareaLogOutput {
    background-image: url("../img/background/icon_textarea_log_64x64.png");
    min-width: 100%;
    width: 100%;
    min-height: 270px;
}



/* ########################################################################## */
/* LINKs */
/* ########################################################################## */
 /* unvisited link */
.classicLink {
  color: #c0392b;
}

.classicLink:hover {
  color: #c0392b;
}



/* ########################################################################## */
/* ROW EMPTY */
/* ########################################################################## */
.row-empty{
    height: 20px;
}

/* ########################################################################## */
/* BUTTONS */
/* ########################################################################## */
.mediaDupes_btnDefaultWidth
{
    min-width: 100px;
}

.mediaDupes_btnDownloadActionWidth
{
    min-width: 160px;
}

/* ########################################################################## */
/* APPLICATION STATE */
/* ########################################################################## */
#applicationState {
    color: gray;
    margin: 0 auto;
    width: 400px;
    min-width: 400px;
    text-align: center;
    font-size: 12px;
}

/* ########################################################################## */
/* BOTTOM */
/* ########################################################################## */
.applicationWindowBottom {
    margin-left: 15px;
    margin-right: 15px;
}

/* ########################################################################## */
/* Use the “system font/San Francisco” */
/* ########################################################################## */
cssbody {
    /*
    font: caption;
    */
}

/* ########################################################################## */
/* FADEIN THE WINDOW */
/* ########################################################################## */
/*
@keyframes fadein {
  from
  {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
*/

.app {
    /* Disable text selection, or your app will feel like a web page */
    -webkit-user-select: none;
    -webkit-app-region: drag;

    /* Cover the whole window */
    /* height: 100%; */

    /* Make sure this matches the native window background color that you pass to
    * electron.BrowserWindow({...}), otherwise your app startup will look janky. */
    background: rgb(255, 255, 255);

    /* Smoother startup */
    animation: fadein 0.5s;
}


/* ########################################################################## */
/* INTRO.JS - Fixing issues where the UI element was just white - not visible */
/* see: https://github.com/usablica/intro.js/issues/840 */
/* ########################################################################## */
.introjs-helperLayer { 
    background: transparent !important; 
    box-shadow: 0 0 0 9999px 
    rgba(1, 1, 1, 0.8); 
}

.introjs-overlay { 
    background: transparent !important; 
}


/* ########################################################################## */
/* PLAYGROUND: Background colors for development */
/* ########################################################################## */
.bg_yellow{
    background-color: #F0E68C;
}

.bg_red{
    background-color: #FA8072;
}

.bg_blue{
    background-color: #87CEEB;
}

.bg_green{
    background-color: #90EE90;
}

